[package]
name = "network_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
pnet = "0.35.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.8"
serde = { version="1.0.215", features = ["derive"] }
serde_json = "1.0.132"
ipnet = "2.10.1"
surge-ping = "0.8.1"
rand = "0.8.5"
trust-dns-resolver = { version = "0.21", features = ["tokio-runtime"] }
